--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Soo zip Site for MVP Test",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : ""
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,16 @@
   "bugs": {
     "url": "https://github.com/thxxx/soozip_site/issues"
   },
-  "homepage": "https://github.com/thxxx/soozip_site#readme"
+  "homepage": "https://github.com/thxxx/soozip_site#readme",
+  "dependencies": {
+    "compression": "^1.7.4",
+    "concurrently": "^6.2.0",
+    "cookie": "^0.4.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
+    "mysql": "^2.18.1",
+    "sanitize-html": "^2.4.0",
+    "session-file-store": "^1.5.0"
+  }
 }
