--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "compression": "^1.7.4",
     "concurrently": "^6.2.0",
     "cookie": "^0.4.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
