--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
     "cookie": "^0.4.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "express-session": "^1.17.2",
     "helmet": "^4.6.0",
