--- a/package.json
+++ b/package.json
@@ -20,16 +20,14 @@
   },
   "homepage": "https://github.com/thxxx/soozip_site#readme",
   "dependencies": {
-    "compression": "^1.7.4",
+    "bcrypt": "^5.0.1",
     "concurrently": "^6.2.0",
-    "cookie": "^0.4.0",
-    "express": "^4.17.1",
-    "express-session": "^1.17.2",
-    "helmet": "^4.6.0",
     "mysql": "^2.18.1",
+    "n": "^7.3.1",
+    "node": "^16.6.1",
     "nodemon": "^2.0.12",
-    "pm2": "^5.1.0",
-    "sanitize-html": "^2.4.0",
-    "session-file-store": "^1.5.0"
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
+    "passport-local": "^1.0.0"
   }
 }
