--- a/server/config/.env
+++ b/server/config/.env
@@ -1,7 +1,7 @@
 COOKIE_SECRET = scuratortiger
-SERVER_PORT = 3001
+SERVER_PORT = 3306
 DB_HOST = localhost
 DB_USER = root
-DB_PASSWORD = 111111
-DB_NAME = MVP1
+DB_PASSWORD = dataghwls159@
+DB_NAME = kut
 DB_ENCODING = utf8mb4
