--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mysql": "^2.18.1",
     "pm2": "^5.1.0",
     "sanitize-html": "^2.4.0",
-    "session-file-store": "^1.5.0"
+    "session-file-store": "^1.5.0",
+    "uuid": "^3.4.0"
   }
 }
