--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "pm2": "^5.1.0",
     "sanitize-html": "^2.4.0",
